--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# data folders
+data/
+
+
 # History files
 .Rhistory
 .Rapp.history
@@ -37,3 +41,5 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+
